# PicoRobot

./: CMakeLists.txt  Dockerfile  README.md
src/: encoder.c  encoder.h  main.c  motor_controller.c  motor_controller.h  optical_sensor.c  optical_sensor.h  pinout.h
utils/: driver_interface.py  graph_pid.py
